style(reset.css, variables.css): update CSS variables and enhance reset styles

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,3 +1,8 @@
+* {
+  font-family: var(--primary-font-family);
+  color: var(--text-color-950);
+}
+
 *,
 ::after,
 ::before,
@@ -34,11 +39,14 @@ iframe,
 embed,
 object {
   display: block;
-  vertical-align: middle;
 }
 
 img,
 video {
   max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
 }
