--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,5 +1,34 @@
 @media (max-width: 900px) {
-    .header {
-        flex-direction: column;
+  .header {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    padding: 16px;
+  }
+  .container {
+    .hero {
+      padding: 16px;
+
+      .hero-info {
+        .hero-title {
+          font-size: var(--xl-font-size);
+          line-height: var(--xl-line-height);
+        }
+
+        .hero-label {
+          min-width: auto;
+          width: fit-content;
+          padding: 5px 10px;
+
+          .search-vacancy {
+            width: 50dvw;
+            font-size: var(--sm-font-size);
+          }
+        }
+      }
     }
+  }
 }
