style(responsive.css): configure responsive design on about-section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,6 +295,8 @@ body {
     .about-container {
       display: flex;
       max-width: 1011px;
+      flex-wrap: wrap;
+      gap: 20px;
 
       .about-title {
         z-index: 1;
@@ -303,9 +305,11 @@ body {
         color: var(--primary-color-800);
         font-weight: var(--md-weight);
         line-height: var(--xl-line-height);
+        min-width: 300px;
       }
 
       .about-info {
+        min-width: 300px;
         z-index: 1;
         flex: 1;
         display: flex;
