--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,7 +371,6 @@ body {
     .candidates-container {
       max-width: var(--lg-breakpoint);
       display: flex;
-      justify-content: center;
       width: 100%;
       align-items: center;
       flex-wrap: wrap;
@@ -443,7 +442,11 @@ body {
     width: 100%;
     margin-top: -1px;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    row-gap: 30px;
+    column-gap: 40px;
+    justify-content: space-around;
+    max-width: var(--lg-breakpoint);
 
     .companies-info {
       flex: 1;
@@ -486,6 +489,7 @@ body {
         border: solid 2px var(--text-color-50);
       }
     }
+
     .companies-banner {
       flex: 1;
       width: 100%;
@@ -499,13 +503,60 @@ body {
   }
 
   .partners-section {
-    .partners-title {
-    }
-    .partners-text {
-    }
-    .partners-list {
-      .partner {
-        .partner-image {
+    display: flex;
+    padding: 88px;
+    background-color: var(--primary-color-700);
+    justify-content: center;
+    width: 100%;
+
+    .partners-container {
+      gap: 16px;
+      width: 100%;
+      max-width: var(--lg-breakpoint);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .partners-title {
+        text-align: center;
+        color: var(--text-color-50);
+        font-size: var(--xl-font-size);
+        font-weight: var(--bold-weight);
+      }
+
+      .partners-text {
+        color: var(--text-color-50);
+        margin-bottom: 32px;
+        font-size: var(--base-font-size);
+        font-weight: var(--thin-weight);
+        text-align: justify;
+        max-width: 736px;
+      }
+
+      .partners-list {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        column-gap: 107px;
+        row-gap: 58px;
+
+        .partner {
+          max-width: 162px;
+
+          .partner-image {
+          }
+        }
+
+        .partner.coursera {
+          max-width: 202px;
+        }
+        .partner.alura {
+          max-width: 85px;
+        }
+
+        .partner.udemy {
+          max-width: 162px;
         }
       }
     }
