--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -699,30 +699,117 @@ body {
   }
 
   .feedbacks-section {
-    .feedbacks-title {
-    }
-    .feedbacks-carousel {
-      .feedback {
-        .feedback-header {
-          .avatar {
-          }
-          .author-info {
-            .feedback-author {
+    padding: 72px 20px;
+    background-color: var(--primary-color-700);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .feedbacks-container {
+      max-width: var(--lg-breakpoint);
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 56px;
+      align-items: center;
+
+      .feedbacks-title {
+        color: var(--text-color-50);
+        font-weight: var(--thin-weight);
+        font-size: var(--xl-font-size);
+        line-height: var(--xl-line-height);
+        text-align: center;
+      }
+
+      .feedbacks-carousel {
+        display: flex;
+        gap: 20px;
+
+        .feedback {
+          padding: 32px;
+          border: solid 1px var(--text-color-50);
+          border-radius: 10px;
+          width: 255px;
+          display: flex;
+          flex-direction: column;
+          gap: 16px;
+
+          .feedback-header {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            .avatar {
+              height: 50px;
+              width: auto;
             }
-            .author-position {
+
+            .author-info {
+              .feedback-author {
+                color: var(--text-color-50);
+                margin-bottom: 6px;
+                font-weight: var(--bold-weight);
+                font-size: var(--sm-font-size);
+              }
+
+              .author-position {
+                color: var(--text-color-50);
+                font-size: var(--tiny-font-size);
+                font-weight: var(--thin-weight);
+              }
+            }
+          }
+
+          .feedback-text {
+            color: var(--text-color-50);
+            font-size: var(--xs-font-size);
+            font-weight: var(--thin-weight);
+            margin-bottom: 4px;
+            line-height: var(--tiny-line-height);
+
+            .highlight {
+              color: var(--secondary-color-600);
+            }
+          }
+
+          .linkedin {
+            color: var(--text-color-50);
+            display: flex;
+            align-items: end;
+            gap: 10px;
+            font-size: var(--xs-font-size);
+            font-weight: var(--thin-weight);
+            flex: 1;
+
+            .linkedin-icon {
+              height: 20px;
+              width: auto;
             }
           }
         }
-        .feedback-text {
-        }
-        .linkedin {
-          .linkedin-icon {
-          }
+
+        .feedback.opacity {
+          opacity: 30%;
         }
       }
-    }
-    .feedback-selected-icons {
-      .feedback-selected-item {
+
+      .feedback-selected-icons {
+        display: flex;
+        gap: 16px;
+
+        .feedback-item-selection {
+          background-color: var(--text-color-50);
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          transition-duration: 0.3s;
+        }
+
+        .feedback-item-selection.selected {
+          transition-duration: 0.3s;
+          background-color: var(--primary-color-700);
+          box-shadow: 0 0 10px var(--text-color-50);
+        }
       }
     }
   }
