refactor(styles): divide styles into different files to better organization

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -50,3 +50,10 @@ video {
 a {
   text-decoration: none;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-x: hidden;
+}
