docs(README): added project objetives, screenshots and author data into docs

--- a/assets/css/styles/main/feedbacks-section.css
+++ b/assets/css/styles/main/feedbacks-section.css
@@ -27,6 +27,7 @@
         user-select: none;
         display: flex;
         gap: 20px;
+        overflow-x: hidden;
 
         .feedback {
           padding: 32px;
