--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,23 @@
+@media (max-width: 1200px) {
+  .container {
+    .feedbacks-section {
+      .swiper::after, .swiper::before {
+        width: 30%;
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    .feedbacks-section {
+      .swiper::after, .swiper::before {
+        width: 35%;
+      }
+    }
+  }
+}
+
 @media (max-width: 950px) {
   .header {
     flex-direction: column;
