--- a/assets/css/styles/main/feedbacks-section.css
+++ b/assets/css/styles/main/feedbacks-section.css
@@ -124,29 +124,29 @@
 
     .swiper::after {
       content: "";
-      width: 30%;
+      width: 25%;
       position: absolute;
-      height: calc(100% - 76px);
+      height: calc(100% - 66px);
       z-index: 1;
       background: linear-gradient(
         to left,
-        var(--primary-color-700),
+        var(--primary-color-700) 70%,
         transparent
       );
-      opacity: 0.8;
+      opacity: 0.7;
       right: 0;
       top: 0;
     }
 
     .swiper::before {
       content: "";
-      width: 30%;
+      width: 25%;
       position: absolute;
       height: calc(100% - 76px);
       z-index: 2;
       background: linear-gradient(
         to right,
-        var(--primary-color-700),
+        var(--primary-color-700) 70%,
         transparent
       );
       opacity: 0.8;
