--- a/assets/css/styles/main/companies-section.css
+++ b/assets/css/styles/main/companies-section.css
@@ -3,7 +3,7 @@
     margin: 72px 32px;
     padding: 72px 95px;
     border-radius: 50px;
-    width: fit-content;
+    width: 95%;
     display: flex;
     align-items: center;
     background-color: var(--primary-color-700);
