--- a/assets/css/styles/main/companies-section.css
+++ b/assets/css/styles/main/companies-section.css
@@ -49,8 +49,9 @@
           background-color: var(--text-color-50);
 
           .company-logo {
-            width: 40px;
+            width: 70px;
             height: auto;
+            border-radius: 50%;
           }
         }
       }
