fix: correcting the Excellence Partners logo

--- a/assets/css/styles/main/partners-section.css
+++ b/assets/css/styles/main/partners-section.css
@@ -49,8 +49,14 @@
           max-width: 85px;
         }
 
-        .partner.udemy {
+        .partner.recruiter {
           max-width: 162px;
+        }
+
+        .partner-image {
+          border-radius: 50%;
+          width: 100%;
+          height: auto;
         }
       }
     }
